--- a/style.css
+++ b/style.css
@@ -2,3 +2,22 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+.header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: Roboto, 'Open Sans', sans-serif;
+    font-size: 24px;
+    font-weight: 500;
+    color: #F9FAF8;
+    background-color: #1F2937;
+}
+
+ul {
+    display: flex;
+    gap: 20px;
+    font-size: 18px;
+    color: #E5E7EB;
+    list-style: none;
+}
