--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ ul {
     font-weight: 900;
 }
 
-.info-section .card {
+.info-section .cards {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 }
