--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 40px;
+    gap: 80px;
     padding: 80px;
     font-size: 36px;
     color: #1F2937;
@@ -71,5 +71,13 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+    gap: 60px;
+}
+
+.info-section .card {
+    width: 300px;
+    height: 300px;
+    color: #808080;
+    font-size: 18px;
+    font-weight: normal;
 }
