--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ ul {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 80px;
+    gap: 40px;
     padding: 80px;
     font-size: 36px;
     color: #1F2937;
@@ -75,9 +75,19 @@ ul {
 }
 
 .info-section .card {
-    width: 300px;
-    height: 300px;
+    width: 200px;
     color: #808080;
     font-size: 18px;
     font-weight: normal;
+    text-align: center;
+}
+
+.info-section .cards img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-style: solid;
+    border-width: 4px;
+    border-color: #3882F6;
+    border-radius: 15px;
 }
