--- a/style.css
+++ b/style.css
@@ -91,3 +91,14 @@ ul {
     border-color: #3882F6;
     border-radius: 15px;
 }
+
+.info-section .special {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    border-style: solid;
+    border-width: 6px;
+    border-color: #626262;
+    border-radius: 15px;
+}
