Change text size for special card in info section

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ ul {
     border-color: #626262;
     border-radius: 15px;
     overflow: hidden;
+    font-size: 48px;
 }
 
 .info-section .special .special-content {
