--- a/style.css
+++ b/style.css
@@ -116,3 +116,10 @@ ul {
     margin-bottom: 0px;
 }
 
+.quote-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
+}
+
