Add background color, border radius, font style, layout properties to action section container

--- a/style.css
+++ b/style.css
@@ -140,3 +140,11 @@ ul {
     text-align: right;
 }
 
+.action-section {
+    margin: 100px 200px 100px;
+    padding: 40px;
+    background-color: #3882F6;
+    border-radius: 10px;
+    color: #F9FAF8;
+    font-size: 20px;
+}
