--- a/style.css
+++ b/style.css
@@ -147,4 +147,8 @@ ul {
     border-radius: 10px;
     color: #F9FAF8;
     font-size: 20px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
