--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ ul {
     border-radius: 10px;
     color: #F9FAF8;
     font-size: 20px;
-
+    font-weight: bold;
     display: flex;
     justify-content: space-around;
     align-items: center;
